<resources>
    <string name="app_name">MealsMenu</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="catalog">Catalog</string>
    <string name="home">Home</string>
    <string name="reserve">Reserve</string>
    <string name="favorite">Favourite</string>
    <string name="more">More</string>
    <string name="breakfast">Breakfast</string>
    <string name="starter">Starter</string>
    <string name="dessert">Dessert</string>
    <string name="serve">Serve</string>
    <string name="ingredients">Ingredients</string>
    <string name="meal_name">meal_name</string>
    <string name="instruction">Instruction</string>
    <string name="not_found">Not Found!</string>
    <string name="welcome">Welcome!</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="password">Password</string>
    <string name="e_mail">E-mail</string>
    <string name="retype_your_password">Retype your password</string>
    <string name="sign_up">Sign Up</string>
    <string name="title_activity_sign_in_password">SignInPasswordActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_in1">Sign in</string>
</resources>