<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/home"
        android:icon="@drawable/home"
        android:title="@string/home"
        app:showAsAction="always" />
    <item
        android:id="@+id/catalog"
        android:icon="@drawable/catalog"
        android:title="@string/catalog"
        app:showAsAction="always"

        />
    <item
        android:id="@+id/reserve"
        android:icon="@drawable/shop"
        android:title="@string/reserve"
        app:showAsAction="always" />
    <item
        android:id="@+id/favorite"
        android:icon="@drawable/favourite"
        android:title="@string/favorite"
        app:showAsAction="always" />
    <item
        android:id="@+id/more"
        android:icon="@drawable/more"
        android:title="@string/more"
        app:showAsAction="always" />
</menu>
