<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".activity.MealDetailsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/meal_image"
            android:layout_width="312dp"
            android:layout_height="312dp"
            android:layout_gravity="center_horizontal"
            android:contentDescription="@string/app_name" />

        <TextView
            android:id="@+id/meal_name"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="24dp"
            android:fontFamily="Balsamiq Sans"
            android:text="@string/meal_name"
            android:textColor="@color/text_color_detail"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/ingredients"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawablePadding="17.5sp"
            android:gravity="start"
            android:paddingStart="37.5sp"
            android:text="@string/ingredients"
            android:textColor="@color/secondary_dark"
            android:textSize="24sp"
            tools:ignore="RtlSymmetry" />

        <ImageView
            android:id="@+id/line_ingredients"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/line_5" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/ingredients_recycler"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/background"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/recycler_home_design" />

        <TextView
            android:id="@+id/instruction"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawablePadding="17.5sp"
            android:gravity="start"
            android:paddingStart="37.5sp"
            android:text="@string/instruction"
            android:textColor="@color/secondary_dark"
            android:textSize="24sp"
            tools:ignore="RtlSymmetry" />

        <ImageView
            android:id="@+id/line_instruction"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/line_5" />

        <TextView
            android:id="@+id/instruction_details"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawablePadding="17.5sp"
            android:gravity="start"
            android:paddingStart="37.5sp"
            android:text="@string/instruction"
            android:textColor="@color/text_color_detail"
            android:textSize="16sp"
            app:drawableLeftCompat="@drawable/li"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:id="@+id/serve"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawablePadding="17.5sp"
            android:gravity="start"
            android:paddingStart="37.5sp"
            android:text="@string/serve"
            android:textColor="@color/secondary_dark"
            android:textSize="24sp"
            tools:ignore="RtlSymmetry" />

        <ImageView
            android:id="@+id/line_serve"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:contentDescription="@string/serve"
            android:src="@drawable/line_5" />

        <TextView
            android:id="@+id/serve_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawablePadding="17.5sp"
            android:gravity="start"
            android:paddingStart="37.5sp"
            android:text="@string/serve"
            android:textColor="@color/text_color_detail"
            android:textSize="16sp"
            app:drawableLeftCompat="@drawable/li"
            tools:ignore="RtlSymmetry" />
    </LinearLayout>
</ScrollView>